# ceo-execution-os

./: .env.example  .gitignore  ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  ROADMAP.md  SENIOR_DEV_ANALYSIS.md  architecture.md  claude.md  pyproject.toml  readme.md  requirements.txt  summary.md
src/cli/: daily.py  emergency.py  main.py  project.py
src/core/: database.py  metrics.py  models.py
src/protocols/: __init__.py  circuit.py  paralysis.py
tests/: __init__.py  conftest.py  test_metrics.py  test_models.py
